# thrift_20_qt6_macos

./: README_QT6_MACOS.md
.github/workflows/: build.yml  cmake.yml
lib/cpp/: CMakeLists.txt  thrift-qt6.pc.in
lib/cpp/src/thrift/qt/: CMakeLists.txt
lib/cpp/test/: CMakeLists.txt
lib/cpp/test/qt/: CMakeLists.txt
lib/java/: build.gradle
lib/js/: package-lock.json  package.json
lib/js/test/: build.xml
lib/kotlin/: build.gradle.kts  settings.gradle.kts
lib/kotlin/cross-test-client/: build.gradle.kts
lib/kotlin/cross-test-server/: build.gradle.kts
